--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,14 @@
 server {
-	listen	80;
+  listen                80;
+  server_name           shiny.library.cmu.edu;
+  return                301 https://$server_name$request_uri;
+}
+
+server {
+  listen                443 ssl;
+  server_name           shiny.library.cmu.edu;
+  ssl_certificate       combined.cer;
+  ssl_certificate_key   myserver.key;
 
   location / {
     proxy_pass  http://shiny:3838/;
