--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,8 +7,8 @@ server {
 server {
   listen                443 ssl;
   server_name           shiny.library.cmu.edu;
-  ssl_certificate       combined.cer;
-  ssl_certificate_key   myserver.key;
+  ssl_certificate       /etc/nginx/conf.d/combined.cer;
+  ssl_certificate_key   /etc/nginx/conf.d/myserver.key;
 
   location / {
     proxy_pass  http://shiny:3838/;
