--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - ./shiny_logs/:/var/log/shiny-server/
 
   nginx:
-    image: nginx
+    image: nginx:1.17.6
     ports:
       - "80:80"
       - "443:443"
