try shiny server templates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./apps/:/srv/shiny-server/
       - ./shiny_logs/:/var/log/shiny-server/
+      - ./templates/:/etc/shiny-server/templates/
 
   nginx:
     image: nginx:1.17.6
