--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -16,6 +16,9 @@ server {
 
     # When a user visits the base URL rather than a particular application,
     # an index of the applications available in this directory will be shown.
-    directory_index off;
+    directory_index on;
+
+    # Enable custom templates
+    template_dir /etc/shiny-server/templates;
   }
 }
