--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - 3838
     volumes:
       - ./shiny_logs/:/var/log/shiny-server/
+    restart: always
 
   nginx:
     image: nginx:1.17.6
@@ -15,3 +16,4 @@ services:
       - "443:443"
     volumes:
       - ./nginx/:/etc/nginx/conf.d/
+    restart: always
