--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -9,14 +9,14 @@ server {
   location / {
 
     # Host the directory of Shiny Apps stored in this directory
-    site_dir /srv/shiny-server;
+    site_dir /srv/shiny-server/;
 
     # Log all Shiny output to files in this directory
     log_dir /var/log/shiny-server;
 
     # When a user visits the base URL rather than a particular application,
     # an index of the applications available in this directory will be shown.
-    directory_index on;
+    directory_index off;
 
     # Enable custom templates
     template_dir /etc/shiny-server/templates;
