--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,5 +12,9 @@ server {
 
   location / {
     proxy_pass  http://shiny:3838/;
+    location /sls/ {
+      auth_basic "Restricted Content";
+      auth_basic_user_file "/etc/nginx/conf.d/.htaccess";
+    }
   }
 }
