--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,6 +13,7 @@ server {
   location / {
     proxy_pass  http://shiny:3838/;
     location /sls/ {
+      proxy_pass  http://shiny:3838/;
       auth_basic "Restricted Content";
       auth_basic_user_file "/etc/nginx/conf.d/.htaccess";
     }
