doh, wrong name for file

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,7 +13,7 @@ server {
   location /sls/ {
       proxy_pass  http://shiny:3838/;
       auth_basic "Restricted Content";
-      auth_basic_user_file "/etc/nginx/conf.d/.htaccess";
+      auth_basic_user_file "/etc/nginx/conf.d/.htpasswd";
   }
 
   location / {
