try nesting again

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,13 +10,13 @@ server {
   ssl_certificate       /etc/nginx/conf.d/combined.cer;
   ssl_certificate_key   /etc/nginx/conf.d/myserver.key;
 
-  location /sls/ {
-      proxy_pass  http://shiny:3838/;
-      auth_basic "Restricted Content";
-      auth_basic_user_file "/etc/nginx/conf.d/.htpasswd";
-  }
 
   location / {
     proxy_pass  http://shiny:3838/;
+    location sls/ {
+        proxy_pass  http://shiny:3838/sls/;
+        auth_basic "Restricted Content";
+        auth_basic_user_file "/etc/nginx/conf.d/.htpasswd";
+    }
   }
 }
